RESOLVED FIXED198699
[iOS] fast/xsl tests are flaky when run after certain viewport shrink-to-fit tests
https://bugs.webkit.org/show_bug.cgi?id=198699
Summary [iOS] fast/xsl tests are flaky when run after certain viewport shrink-to-fit ...
Wenson Hsieh
Reported 2019-06-09 14:21:47 PDT
Attachments
Patch (5.42 KB, patch)
2019-06-09 14:34 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-06-09 14:34:42 PDT
Wenson Hsieh
Comment 2 2019-06-09 16:25:10 PDT
> : No such file or directory at /home/buildbot/WebKit/Source/WebCore/bindings/scripts/preprocess-idls.pl line 105. > Died at C:/cygwin/home/buildbot/WebKit/Source/WebCore/bindings/scripts/generate-bindings-all.pl line 85. > C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\VC\VCTargets\Microsoft.CppCommon.targets(209,5): error MSB6006: "cmd.exe" exited with code 2. [C:\cygwin\home\buildbot\WebKit\WebKitBuild\Release\Source\WebCore\WebCoreBindings.vcxproj] > Generating ../../DerivedSources/JavaScriptCore/JSInternalPromiseConstructor.lut.h It doesn't look like this build failure is related.
Alexey Proskuryakov
Comment 3 2019-06-09 21:30:36 PDT
Really interesting how these viewport test failures turn out to have entirely different root causes - see also bug 196236 and bug 197286. There are others that are still waiting to be resolved: bug 196298, bug 195341, bug 181821.
Wenson Hsieh
Comment 4 2019-06-09 21:39:49 PDT
(In reply to Alexey Proskuryakov from comment #3) > Really interesting how these viewport test failures turn out to have > entirely different root causes - see also bug 196236 and bug 197286. > > There are others that are still waiting to be resolved: bug 196298, bug > 195341, bug 181821. It's not unusual that the tests in fast/viewport/ios are so flaky for different reasons than other tests that are generally about visual viewports, since the iOS tests tend to exercise the obscure nooks and crannies of ViewportConfiguration and friends, which only affect iOS. I'll be investigating the other fast/viewport/ios failures (fast/viewport/ios/use-minimum-device-width-for-page-without-viewport-meta.html and fast/viewport/ios/*-width-viewport-after-changing-view-scale.html) next.
WebKit Commit Bot
Comment 5 2019-06-10 13:11:23 PDT
Comment on attachment 371713 [details] Patch Clearing flags on attachment: 371713 Committed r246276: <https://trac.webkit.org/changeset/246276>
WebKit Commit Bot
Comment 6 2019-06-10 13:11:25 PDT
All reviewed patches have been landed. Closing bug.
Wenson Hsieh
Comment 7 2019-06-10 13:55:16 PDT
*** Bug 197616 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.